@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: fCmd.test,v 1.26.2.2 2003/06/23 10:21:16 vincentdarley Exp $
+# RCS: @(#) $Id: fCmd.test,v 1.26.2.3 2003/10/06 17:27:00 dgp Exp $
 #
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
@@ -669,10 +669,9 @@ test fCmd-8.1 {FileBasename: basename of ~user: argc == 1 && *path == ~} \
     file delete -force td1
     set result
 } "1 {error renaming \"~$user\" to \"td1/[file tail ~$user]\": permission denied}"
-test fCmd-8.2 {FileBasename: basename of ~user: argc == 1 && *path == ~} \
-	{unixOnly notRoot} {
-    file tail ~$user
-} "$user"
+test fCmd-8.2 {FileBasename: basename of ~user: argc == 1 && *path == ~} {
+    string equal [file tail ~$user] ~$user
+} 0
 test fCmd-8.3 {file copy and path translation: ensure correct error} {
     list [catch {file copy ~ [file join this file doesnt exist]} res] $res
 } [list 1 \
